--- a/Project Codes/01. Raw Data Aggregation Scripts/12_26_2019_Airbnb_Raw_Data_Aggregation.ipynb
+++ b/Project Codes/01. Raw Data Aggregation Scripts/12_26_2019_Airbnb_Raw_Data_Aggregation.ipynb
@@ -4,17 +4,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this notebook I will be aggregating a years worth of listings, reviews, and calendar information from [Airbnb](http://insideairbnb.com/get-the-data.html). This data pertains to the San Francisco(SF) area from November of 2018 through October of 2019.\n",
+    "# Airbnb Raw Data Aggregation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Introduction\n",
     "\n",
-    "The Airbnb data descriptions are as follows:\n",
-    "- Listings: Detailed listings data including full descriptions and average review score\n",
-    "- Calendar: Detailed calendar data for listings, including listing id and the price and availability for that day;\n",
-    "- Reviews: Detailed review data for listings including unique id for each reviewer and detailed comments;"
+    "In this notebook I will be aggregating about a year’s worth of listings, reviews, and calendar information from [Airbnb](http://insideairbnb.com/get-the-data.html). \n",
+    "\n",
+    "The listings and reviews data pertains to the San Francisco (SF) area from November of 2018 through December of 2019. The calendar data pertains to the SF area from September of 2018 through December of 2019 to capture unavailable listings information in the months of November and December 2018.\n",
+    "\n",
+    "I am aggregating the listings, reviews, and calendar information into separate data frames and writing them to CSV files for further analysis downstream. Aggregated files will not be available on GitHub; however, you can view all of the raw data used  [here](https://github.com/KishenSharma6/Airbnb-SF_ML_-_Text_Analysis/tree/master/Data/01_Raw/SF%20Airbnb%20Raw%20Data)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Aggregation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +37,7 @@
     "import pandas as pd\n",
     "import glob\n",
     "\n",
-    "#Set path to location of SF Airbnb raw data on local machine\n",
+    "#Set path to location of SF Airbnb raw data\n",
     "path = r'C:\\Users\\kishe\\Documents\\Data Science\\Projects\\Python Projects\\In Progress\\Air BnB - SF\\Data\\01_Raw\\SF Airbnb Raw Data/'"
    ]
   },
@@ -30,14 +45,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**SF Listings Data Aggregation(11/2018 - 10/2019)**"
+    "**SF Listings Data Aggregation(11/2018 - 12/2019)**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\kishe\\Miniconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3051: DtypeWarning: Columns (61,62) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  interactivity=interactivity, compiler=compiler, result=result)\n"
+     ]
+    }
+   ],
    "source": [
     "#Capture listings data from path\n",
     "all_files = glob.glob(path + \"listings?*.gz\")\n",
@@ -53,14 +77,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Listings shape:  (88937, 106)\n"
+      "Listings shape:  (105777, 106)\n"
      ]
     },
     {
@@ -293,7 +317,7 @@
        "[5 rows x 106 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,19 +353,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**SF Reviews Data Aggregation(11/2018 - 10/2019)**"
+    "**SF Reviews Data Aggregation(11/2018 - 12/2019)**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reviews shape:  (430766, 6)\n"
+      "Reviews shape:  (464936, 6)\n"
      ]
     },
     {
@@ -439,7 +463,7 @@
        "4         958        15416       Venetia  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,19 +510,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**SF Calendar Data Aggregation(11/2018 - 10/2019)**"
+    "**SF Calendar Data Aggregation(09/2018 - 10/2019)**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calendar shape:  (15901917, 7)\n"
+      "Calendar shape:  (20279225, 7)\n"
      ]
     },
     {
@@ -602,7 +626,7 @@
        "4             3.0  $81.00  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -634,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
