--- a/Project Codes/01. Raw Data Aggregation Scripts/12_29_2019_Zillow_Raw_Data_Aggregation.ipynb
+++ b/Project Codes/01. Raw Data Aggregation Scripts/12_29_2019_Zillow_Raw_Data_Aggregation.ipynb
@@ -4,9 +4,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introduction\n",
+    "# Zillow Raw Data Aggregation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Introduction\n",
     "\n",
-    "In this notebook I will be aggregating a median rental prices for 1 - 4 bedroom properties from zillow. This data pertains to the San Francisco(SF) area from March of 2010 through November of 2019."
+    "In this notebook I will be aggregating median rental prices from Zillow for different sized properties across the United States. This data pertains to the area from March of 2010 through November of 2019."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Aggregation"
    ]
   },
   {
@@ -20,20 +34,6 @@
     "import glob\n",
     "\n",
     "import os"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Increase number of columns and rows displayed by Pandas\n",
-    "pd.set_option('display.max_columns', 500)\n",
-    "pd.set_option('display.max_rows',100)\n",
-    "\n",
-    "#supress future warnings\n",
-    "import warnings; warnings.simplefilter(action='ignore', category=FutureWarning)"
    ]
   },
   {
