--- a/Project Codes/02. Data Cleaning Scripts/12_29_2019_Zillow_Cleaning.ipynb
+++ b/Project Codes/02. Data Cleaning Scripts/12_29_2019_Zillow_Cleaning.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Cleaning - Zillow Data"
+    "# Data Cleaning - Aggregated Raw Zillow Data"
    ]
   },
   {
@@ -13,11 +13,13 @@
    "source": [
     "## Introduction\n",
     "\n",
-    "In the following notebook, I will be cleaning an aggregation of Zillow Median Rent across the United States. This aggregation consists of data from 03/2010 through 11/2019.\n",
+    "In the following notebook, I will be cleaning an aggregation of some Zillow raw data. This data pertains to the median rent prices across the United States  from 03/2010 through 11/2019.\n",
+    "\n",
+    "Data will be used to supplement my analysis of the prices of different Airbnb listings in San Francisco.\n",
     "\n",
     "The aggregation source code can be found [here](https://github.com/KishenSharma6/Airbnb-SF_ML_-_Text_Analysis/blob/master/Project%20Codes/01.%20Raw%20Data%20Aggregation%20Scripts/12_28_2019_Zillow_Raw_Data_Aggregation.ipynb)\n",
     "\n",
-    "Raw data can be found [here](https://github.com/KishenSharma6/Airbnb-SF_ML_-_Text_Analysis/tree/master/Data/01_Raw/Zillow%20Raw%20Data)"
+    "The Zillow raw data can be found [here](https://github.com/KishenSharma6/Airbnb-SF_ML_-_Text_Analysis/tree/master/Data/01_Raw/Zillow%20Raw%20Data)"
    ]
   },
   {
@@ -1245,7 +1247,7 @@
     "#Convert Date to month_year\n",
     "zillow['Date'] = zillow['Date'].dt.to_period('M')\n",
     "\n",
-    "#Convert Bedrooms and SizeRank to objects\n",
+    "#Convert Bedrooms and SizeRank to objects(these are categorical variables)\n",
     "cols = ['Bedrooms', 'SizeRank','Zip']\n",
     "zillow[cols] = zillow[cols].astype(object)\n",
     "\n",
@@ -1257,7 +1259,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Missing Values**"
+    "**Missing Values**\n",
+    "\n",
+    "Rows that contain missing values in Median_Rent will not be useable in Airbnb analysis."
    ]
   },
   {
