Pushed visualizations to Visualizations/

--- a/Project Codes/02. Data Cleaning Scripts/12_27_2019_Reviews_Cleaning.ipynb
+++ b/Project Codes/02. Data Cleaning Scripts/12_27_2019_Reviews_Cleaning.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Cleaning - Airbnb Reviews"
+    "# Data Cleaning - Aggregated Airbnb Reviews"
    ]
   },
   {
@@ -13,7 +13,7 @@
    "source": [
     "## Introduction\n",
     "\n",
-    "In the following notebook, I will be cleaning an aggregation of Airbnb Reviews Data of the San Francisco area. This aggregation consists of reviews data from 11/2018 through 10/2019.\n",
+    "In the following notebook, I will be cleaning an aggregation of Airbnb Reviews Data of the San Francisco area. This aggregation consists of reviews data from 11/2018 through 12/2019.\n",
     "\n",
     "The aggregation source code can be found [here](https://github.com/KishenSharma6/Airbnb-SF_ML_-_Text_Analysis/blob/master/Airbnb%20Raw%20Data%20Aggregation.ipynb)\n",
     "\n",
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
     "parse_dates = ['date']\n",
     "\n",
     "#Read in Airbnb Review Data\n",
-    "reviews = pd.read_csv(path, sep=',', parse_dates=parse_dates,index_col=0)\n"
+    "reviews = pd.read_csv(path, sep=',', parse_dates=parse_dates,index_col=0)"
    ]
   },
   {
@@ -99,22 +99,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# #Create Pandas Profiling Report for reviews data\n",
-    "# profile = reviews.profile_report(title='Airbnb Reviews Report', check_correlation_pearson= False, \n",
-    "# correlations={'pearson': False,\n",
-    "# 'spearman': False,\n",
-    "# 'kendall': False,\n",
-    "# 'phi_k': False,\n",
-    "# 'cramers': False,\n",
-    "# 'recoded':False}, \n",
-    "# plot={'histogram':{'bayesian_blocks_bins': False}})\n",
+    "#Create Pandas Profiling Report for reviews data\n",
+    "profile = reviews.profile_report(title='Airbnb Reviews Report', check_correlation_pearson= False, \n",
+    "correlations={'pearson': False,\n",
+    "'spearman': False,\n",
+    "'kendall': False,\n",
+    "'phi_k': False,\n",
+    "'cramers': False,\n",
+    "'recoded':False}, \n",
+    "plot={'histogram':{'bayesian_blocks_bins': False}})\n",
     "\n",
-    "# #Write profile to an HTML file\n",
-    "# profile.to_file(output_file=\"Airbnb Reviews Report.html\")\n",
+    "#Write profile to an HTML file\n",
+    "profile.to_file(output_file=\"Airbnb Reviews Report.html\")\n",
     "\n",
     "# #View pandas profile for reviews data\n",
     "# profile"
@@ -136,17 +136,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Original shape of reviews: (430766, 6)\n",
+      "Original shape of reviews: (464936, 6)\n",
       "\n",
       "Missing values: \n",
-      " comments         477\n",
+      " comments         504\n",
       "date               0\n",
       "id                 0\n",
       "listing_id         0\n",
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,14 +202,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current shape of reviews: (429536, 6)\n"
+      "Current shape of reviews: (463600, 6)\n"
      ]
     }
    ],
@@ -245,15 +245,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Rows containg non-English characters:  26064\n",
-      "Current shape of reviews: (403472, 6)\n"
+      "Rows containg non-English characters:  28296\n",
+      "Current shape of reviews: (435304, 6)\n"
      ]
     }
    ],
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
