Updated data types to resolve conflict downstream

--- a/Project Codes/02. Data Cleaning Scripts/12_29_2019_Zillow_Cleaning.ipynb
+++ b/Project Codes/02. Data Cleaning Scripts/12_29_2019_Zillow_Cleaning.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1020,7 +1020,7 @@
        "4   1070.0   1100.0   1100.0   1100.0   1100.0   1085.0   1050.0  "
       ]
      },
-     "execution_count": 104,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1042,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1056,7 +1056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1219,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1227,15 +1227,15 @@
      "output_type": "stream",
      "text": [
       "Updated Zillow data types: \n",
-      " City              object\n",
-      "County            object\n",
-      "Metro             object\n",
-      "Zip               object\n",
-      "State             object\n",
-      "SizeRank          object\n",
-      "Bedrooms          object\n",
-      "Date           period[M]\n",
-      "Median_Rent      float64\n",
+      " City                   object\n",
+      "County                 object\n",
+      "Metro                  object\n",
+      "Zip                    object\n",
+      "State                  object\n",
+      "SizeRank               object\n",
+      "Bedrooms               object\n",
+      "Date           datetime64[ns]\n",
+      "Median_Rent           float64\n",
       "dtype: object\n"
      ]
     }
@@ -1243,9 +1243,6 @@
    "source": [
     "#Set date data type\n",
     "zillow.Date= zillow.Date.astype('datetime64[ns]')\n",
-    "\n",
-    "#Convert Date to month_year\n",
-    "zillow['Date'] = zillow['Date'].dt.to_period('M')\n",
     "\n",
     "#Convert Bedrooms and SizeRank to objects(these are categorical variables)\n",
     "cols = ['Bedrooms', 'SizeRank','Zip']\n",
@@ -1266,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1318,7 +1315,7 @@
        "      <td>VA</td>\n",
        "      <td>83</td>\n",
        "      <td>3</td>\n",
-       "      <td>2010-03</td>\n",
+       "      <td>2010-03-01</td>\n",
        "      <td>1200.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1330,7 +1327,7 @@
        "      <td>VA</td>\n",
        "      <td>83</td>\n",
        "      <td>3</td>\n",
-       "      <td>2010-04</td>\n",
+       "      <td>2010-04-01</td>\n",
        "      <td>1250.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1342,7 +1339,7 @@
        "      <td>VA</td>\n",
        "      <td>83</td>\n",
        "      <td>3</td>\n",
-       "      <td>2010-05</td>\n",
+       "      <td>2010-05-01</td>\n",
        "      <td>1200.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1354,7 +1351,7 @@
        "      <td>VA</td>\n",
        "      <td>83</td>\n",
        "      <td>3</td>\n",
-       "      <td>2010-06</td>\n",
+       "      <td>2010-06-01</td>\n",
        "      <td>1250.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1366,7 +1363,7 @@
        "      <td>VA</td>\n",
        "      <td>83</td>\n",
        "      <td>3</td>\n",
-       "      <td>2010-07</td>\n",
+       "      <td>2010-07-01</td>\n",
        "      <td>1225.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1388,12 +1385,12 @@
        "24248  Virginia Beach-Norfolk-Newport News  23462    VA       83        3   \n",
        "30688  Virginia Beach-Norfolk-Newport News  23462    VA       83        3   \n",
        "\n",
-       "          Date  Median_Rent  \n",
-       "4928   2010-03       1200.0  \n",
-       "11368  2010-04       1250.0  \n",
-       "17808  2010-05       1200.0  \n",
-       "24248  2010-06       1250.0  \n",
-       "30688  2010-07       1225.0  "
+       "            Date  Median_Rent  \n",
+       "4928  2010-03-01       1200.0  \n",
+       "11368 2010-04-01       1250.0  \n",
+       "17808 2010-05-01       1200.0  \n",
+       "24248 2010-06-01       1250.0  \n",
+       "30688 2010-07-01       1225.0  "
       ]
      },
      "metadata": {},
@@ -1420,7 +1417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1437,7 +1434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1524,7 +1521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1551,7 +1548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
