Minor Updates to path

--- a/Project Codes/01. Raw Data Aggregation Scripts/12_26_2019_Airbnb_Raw_Data_Aggregation.ipynb
+++ b/Project Codes/01. Raw Data Aggregation Scripts/12_26_2019_Airbnb_Raw_Data_Aggregation.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "In this notebook I will be aggregating about a year’s worth of listings, reviews, and calendar information from [Airbnb](http://insideairbnb.com/get-the-data.html). \n",
     "\n",
-    "The listings and reviews data pertains to the San Francisco (SF) area from November of 2018 through December of 2019. The calendar data pertains to the SF area from September of 2018 through December of 2019 to capture unavailable listings information in the months of November and December 2018.\n",
+    "The data pertains to the San Francisco (SF) area from December of 2018 through December of 2019.\n",
     "\n",
     "I am aggregating the listings, reviews, and calendar information into separate data frames and writing them to CSV files for further analysis downstream. Aggregated files will not be available on GitHub; however, you can view all of the raw data used  [here](https://github.com/KishenSharma6/Airbnb-SF_ML_-_Text_Analysis/tree/master/Data/01_Raw/SF%20Airbnb%20Raw%20Data)."
    ]
@@ -52,16 +52,7 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\kishe\\Miniconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3051: DtypeWarning: Columns (61,62) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  interactivity=interactivity, compiler=compiler, result=result)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Capture listings data from path\n",
     "all_files = glob.glob(path + \"listings?*.gz\")\n",
@@ -84,7 +75,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Listings shape:  (105777, 106)\n"
+      "Listings shape:  (98796, 106)\n"
      ]
     },
     {
@@ -343,7 +334,7 @@
    "outputs": [],
    "source": [
     "#Set path to write df to csv\n",
-    "path_to_file = r'C:\\Users\\kishe\\Documents\\Data Science\\Projects\\Python Projects\\In Progress\\Air BnB - SF\\SF Airbnb Raw Data - Aggregated\\12_26_2019_Listings.csv'\n",
+    "path_to_file = r'C:\\Users\\kishe\\Documents\\Data Science\\Projects\\Python Projects\\In Progress\\Air BnB - SF\\SF Airbnb Raw Data - Aggregated\\01_04_2020_Listings_Raw_Aggregated.csv'\n",
     "\n",
     "#Write to csv file\n",
     "listings.to_csv(path_to_file, sep=',')"
@@ -365,7 +356,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reviews shape:  (464936, 6)\n"
+      "Reviews shape:  (458157, 6)\n"
      ]
     },
     {
@@ -500,7 +491,7 @@
    "outputs": [],
    "source": [
     "#Set path to write df to csv\n",
-    "path_to_file = r'C:\\Users\\kishe\\Documents\\Data Science\\Projects\\Python Projects\\In Progress\\Air BnB - SF\\SF Airbnb Raw Data - Aggregated\\12_26_2019_Reviews.csv'\n",
+    "path_to_file = r'C:\\Users\\kishe\\Documents\\Data Science\\Projects\\Python Projects\\In Progress\\Air BnB - SF\\SF Airbnb Raw Data - Aggregated\\01_04_2020_Reviews_Raw_Aggregated.csv'\n",
     "\n",
     "#Write to csv file\n",
     "reviews.to_csv(path_to_file, sep=',')"
@@ -522,7 +513,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calendar shape:  (20279225, 7)\n"
+      "Calendar shape:  (18089659, 7)\n"
      ]
     },
     {
@@ -663,7 +654,7 @@
    "outputs": [],
    "source": [
     "#Set path to write df to csv\n",
-    "path_to_file = r'C:\\Users\\kishe\\Documents\\Data Science\\Projects\\Python Projects\\In Progress\\Air BnB - SF\\SF Airbnb Raw Data - Aggregated\\12_26_2019_Calendar.csv'\n",
+    "path_to_file = r'C:\\Users\\kishe\\Documents\\Data Science\\Projects\\Python Projects\\In Progress\\Air BnB - SF\\SF Airbnb Raw Data - Aggregated\\01_04_2020_Calendar_Raw_Aggregated.csv'\n",
     "\n",
     "#Write to csv file\n",
     "calendar.to_csv(path_to_file, sep=',')"
