Minor path edits

--- a/Project Codes/01. Raw Data Aggregation Scripts/12_26_2019_Airbnb_Raw_Data_Aggregation.ipynb
+++ b/Project Codes/01. Raw Data Aggregation Scripts/12_26_2019_Airbnb_Raw_Data_Aggregation.ipynb
@@ -334,7 +334,7 @@
    "outputs": [],
    "source": [
     "#Set path to write df to csv\n",
-    "path_to_file = r'C:\\Users\\kishe\\Documents\\Data Science\\Projects\\Python Projects\\In Progress\\Air BnB - SF\\SF Airbnb Raw Data - Aggregated\\01_04_2020_Listings_Raw_Aggregated.csv'\n",
+    "path_to_file = r'C:\\Users\\kishe\\Documents\\Data Science\\Projects\\Python Projects\\In Progress\\Air BnB - SF\\Data\\01_Raw\\SF Airbnb Raw Data\\SF Airbnb Raw Data - Aggregated\\01_04_2020_Listings_Raw_Aggregated.csv'\n",
     "\n",
     "#Write to csv file\n",
     "listings.to_csv(path_to_file, sep=',')"
@@ -491,7 +491,7 @@
    "outputs": [],
    "source": [
     "#Set path to write df to csv\n",
-    "path_to_file = r'C:\\Users\\kishe\\Documents\\Data Science\\Projects\\Python Projects\\In Progress\\Air BnB - SF\\SF Airbnb Raw Data - Aggregated\\01_04_2020_Reviews_Raw_Aggregated.csv'\n",
+    "path_to_file = r'C:\\Users\\kishe\\Documents\\Data Science\\Projects\\Python Projects\\In Progress\\Air BnB - SF\\Data\\01_Raw\\SF Airbnb Raw Data\\SF Airbnb Raw Data - Aggregated\\01_04_2020_Reviews_Raw_Aggregated.csv'\n",
     "\n",
     "#Write to csv file\n",
     "reviews.to_csv(path_to_file, sep=',')"
@@ -654,7 +654,7 @@
    "outputs": [],
    "source": [
     "#Set path to write df to csv\n",
-    "path_to_file = r'C:\\Users\\kishe\\Documents\\Data Science\\Projects\\Python Projects\\In Progress\\Air BnB - SF\\SF Airbnb Raw Data - Aggregated\\01_04_2020_Calendar_Raw_Aggregated.csv'\n",
+    "path_to_file = r'C:\\Users\\kishe\\Documents\\Data Science\\Projects\\Python Projects\\In Progress\\Air BnB - SF\\Data\\01_Raw\\SF Airbnb Raw Data\\SF Airbnb Raw Data - Aggregated\\01_04_2020_Calendar_Raw_Aggregated.csv'\n",
     "\n",
     "#Write to csv file\n",
     "calendar.to_csv(path_to_file, sep=',')"
