Minor edits to path

--- a/Project Codes/01. Raw Data Aggregation Scripts/12_29_2019_Zillow_Raw_Data_Aggregation.ipynb
+++ b/Project Codes/01. Raw Data Aggregation Scripts/12_29_2019_Zillow_Raw_Data_Aggregation.ipynb
@@ -3952,7 +3952,7 @@
    "outputs": [],
    "source": [
     "#Set path to export cleaned zillow data\n",
-    "path = r'C:\\Users\\kishe\\Documents\\Data Science\\Projects\\Python Projects\\In Progress\\Air BnB - SF\\SF Airbnb Raw Data - Aggregated\\12_29_2019_Zillow_Raw_Aggregated.csv'\n",
+    "path = r'C:\\Users\\kishe\\Documents\\Data Science\\Projects\\Python Projects\\In Progress\\Air BnB - SF\\Data\\01_Raw\\Zillow Raw Data\\Zillow Raw Data Aggregated\\12_29_2019_Zillow_Raw_Aggregated.csv'\n",
     "\n",
     "#Write zillow to csv file\n",
     "zillow.to_csv(path, sep=',')"
