Minor path edits

--- a/Project Codes/02. Data Cleaning Scripts/12_27_2019_Calendar_Cleaning.ipynb
+++ b/Project Codes/02. Data Cleaning Scripts/12_27_2019_Calendar_Cleaning.ipynb
@@ -82,7 +82,7 @@
    "outputs": [],
    "source": [
     "#Set path to get aggregated calendar data\n",
-    "path = r'C:\\Users\\kishe\\Documents\\Data Science\\Projects\\Python Projects\\In Progress\\Air BnB - SF\\SF Airbnb Raw Data - Aggregated\\01_04_2020_Calendar_Raw_Aggregated.csv'\n",
+    "path = r'C:\\Users\\kishe\\Documents\\Data Science\\Projects\\Python Projects\\In Progress\\Air BnB - SF\\Data\\01_Raw\\SF Airbnb Raw Data\\SF Airbnb Raw Data - Aggregated\\01_04_2020_Calendar_Raw_Aggregated.csv'\n",
     "\n",
     "#Set date columns for parsing\n",
     "parse_dates = ['date']\n",
