--- a/Project Codes/02. Data Cleaning Scripts/12_27_2019_Reviews_Cleaning.ipynb
+++ b/Project Codes/02. Data Cleaning Scripts/12_27_2019_Reviews_Cleaning.ipynb
@@ -81,7 +81,7 @@
    "outputs": [],
    "source": [
     "#Set path to get aggregated Calendar data\n",
-    "path = r'C:\\Users\\kishe\\Documents\\Data Science\\Projects\\Python Projects\\In Progress\\Air BnB - SF\\SF Airbnb Raw Data - Aggregated\\01_04_2020_Reviews_Raw_Aggregated.csv'\n",
+    "path = r'C:\\Users\\kishe\\Documents\\Data Science\\Projects\\Python Projects\\In Progress\\Air BnB - SF\\Data\\01_Raw\\SF Airbnb Raw Data\\SF Airbnb Raw Data - Aggregated\\01_04_2020_Reviews_Raw_Aggregated.csv'\n",
     "\n",
     "#Parse dates\n",
     "parse_dates = ['date']\n",
@@ -3744,21 +3744,21 @@
     }
    ],
    "source": [
-    "#Create Pandas Profiling Report for reviews data\n",
-    "profile = reviews.profile_report(title='Airbnb Reviews Report', check_correlation_pearson= False, \n",
-    "correlations={'pearson': False,\n",
-    "'spearman': False,\n",
-    "'kendall': False,\n",
-    "'phi_k': False,\n",
-    "'cramers': False,\n",
-    "'recoded':False}, \n",
-    "plot={'histogram':{'bayesian_blocks_bins': False}})\n",
+    "# #Create Pandas Profiling Report for reviews data\n",
+    "# profile = reviews.profile_report(title='Airbnb Reviews Report', check_correlation_pearson= False, \n",
+    "# correlations={'pearson': False,\n",
+    "# 'spearman': False,\n",
+    "# 'kendall': False,\n",
+    "# 'phi_k': False,\n",
+    "# 'cramers': False,\n",
+    "# 'recoded':False}, \n",
+    "# plot={'histogram':{'bayesian_blocks_bins': False}})\n",
     "\n",
-    "#Write profile to an HTML file\n",
-    "profile.to_file(output_file=\"Airbnb Reviews Report.html\")\n",
+    "# #Write profile to an HTML file\n",
+    "# profile.to_file(output_file=\"Airbnb Reviews Report.html\")\n",
     "\n",
-    "#View pandas profile for reviews data\n",
-    "profile"
+    "# #View pandas profile for reviews data\n",
+    "# profile"
    ]
   },
   {
