--- a/Project Codes/02. Data Cleaning Scripts/12_29_2019_Zillow_Cleaning.ipynb
+++ b/Project Codes/02. Data Cleaning Scripts/12_29_2019_Zillow_Cleaning.ipynb
@@ -78,7 +78,7 @@
    "outputs": [],
    "source": [
     "#Set path to Zillow Data\n",
-    "path = r'C:\\Users\\kishe\\Documents\\Data Science\\Projects\\Python Projects\\In Progress\\Air BnB - SF\\SF Airbnb Raw Data - Aggregated\\12_29_2019_Zillow_Raw_Aggregated.csv'\n",
+    "path = r'C:\\Users\\kishe\\Documents\\Data Science\\Projects\\Python Projects\\In Progress\\Air BnB - SF\\Data\\01_Raw\\Zillow Raw Data\\Zillow Raw Data Aggregated\\12_29_2019_Zillow_Raw_Aggregated.csv'\n",
     "\n",
     "#Read in Zillow data\n",
     "zillow = pd.read_csv(path,index_col=0 )\n",
