--- a/Project Codes/03. Exploratory Data Analysis/01_05_2020_TimeSeries.ipynb
+++ b/Project Codes/03. Exploratory Data Analysis/01_05_2020_TimeSeries.ipynb
@@ -673,7 +673,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Might be worth looking at a few years worth of reviews and calendar data to see the demand and  growth over time"
+   ]
   },
   {
    "cell_type": "code",
